--- a/list.html
+++ b/list.html
@@ -4,8 +4,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit-no">
 <title>ToDo</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./css/style.css">
 <script></script>
 </head>
-<body></body>
+<body>
+    <P>Ты справишься!</P>
+</body>
 </html>
