--- a/list.html
+++ b/list.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="ru">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit-no">
-<title>ToDo</title>
-<link rel="stylesheet" href="./css/style.css">
-<script></script>
-</head>
-<body>
-    <P>Ты справишься!</P>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit-no">
+        <title>ToDo</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <script></script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="container__backg">
+                <div class="container__content">
+                     
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
