--- a/list.html
+++ b/list.html
@@ -9,9 +9,14 @@
     </head>
     <body>
         <div class="container">
-            <div class="container__backg">
-                <div class="container__content">
-                     
+            <div class="todo">
+                <div class="todo__content">
+                    <h1 class="todo_title">Task List</h1>
+                    <div class="todo__new">
+                        <input type="text" placeholder="New task">
+                        <div class="todo__add">+</div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
