feat:add a checkbox element

--- a/list.html
+++ b/list.html
@@ -16,6 +16,15 @@
                         <input type="text" placeholder="New task">
                         <div class="todo__add">+</div>
                     </div>
+                    <div class="todo__list">
+                        <div class="todo__task">
+                            <label class="todo__list-title">
+                                <input type="checkbox">
+                            </label>
+                            <div class="todo__task-text">do lessons</div>
+                            <div class="todo__task-del">-</div>
+                        </div>
+                    </div>
                 </div>
                 </div>
             </div>
