--- a/list.html
+++ b/list.html
@@ -18,8 +18,9 @@
                     </div>
                     <div class="todo__list">
                         <div class="todo__task">
-                            <label class="todo__list-title">
+                            <label class="todo__checkbox">
                                 <input type="checkbox">
+                                <div></div>
                             </label>
                             <div class="todo__task-text">do lessons</div>
                             <div class="todo__task-del">-</div>
