--- a/list.html
+++ b/list.html
@@ -16,24 +16,13 @@
                         <input type="text" placeholder="New task" id="new">
                         <div id="add" class="todo__add" >+</div>
                     </div>
-                    <div class="todo__list" id="tasks">
-                        <div class="todo__task todo__task-complete">
-                            <label class="todo__checkbox">
-                                <input type="checkbox">
-                                <div></div>
-                            </label>
-                            <div class="todo__task-text">do lessons</div>
-                            <div class="todo__task-del">-</div>
-                        </div>
-                        <div class="todo__task">
-                            <label class="todo__checkbox">
-                                <input type="checkbox">
-                                <div></div>
-                            </label>
-                            <div class="todo__task-text">do lessons</div>
-                            <div class="todo__task-del">-</div>
-                        </div>
+                    <div class="todo__tasks-count">
+                        <span>Total tasks:</span>
+                        <strong id="count">0</strong>
                     </div>
+                    <div class="todo__list" id="tasks">
+                    </div>
+
                 </div>
                 </div>
             </div>
